--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="soon.html" target="_blank">Dashboard</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="soon.html">Subscribtion</a>
+                <a class="nav-link" href="https://www.patreon.com/upbeatop">Subscribtion</a>
             </li>
         </ul>
         <div class="nav-item dropdown">
