--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Maiyo</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src=""></script>
 <nav class="navbar navbar-expand-lg bg-transparent">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <img src="assets/menuIcon.svg" width="20px" height="20px" style="max-width: none !important;">
@@ -48,7 +48,7 @@
         <div class="nav-item">
             <a class="nav-link" href="soon.html">About</a>
         </div>
-        <button class="btn login-btn btn-outline-accent my-2 my-sm-0" style="font-size: 10px !important;font-family: poppins !important;">LOGIN</button>
+       
     </div>
 </nav>
 <div class="heading">
