--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <img src="maiyo.jpg" width="50" height="50"><br/>
             Copyright © UpBeatGaming - 2022
         </div><br/>
-        <div class="nouridio">website designed by <a href="https://shreyash.sytes.net"> shreyash</a></div>
+        <div class="nouridio">website designed by <a href="https://www.shreyashtailor.cf/"> shreyash</a></div>
     </di
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
